cabal-version:       2.4
name:                hTile
version:             0.0.0.0
synopsis:            Convert geotiffs and other images to STLs for printing or machining.
description:         Convert geotiffs and other images to STLs for printing or machining.
homepage:            https://github.com/timput/hTile
bug-reports:         https://github.com/timput/hTile/issues
license:             GPL-3.0-only
license-file:        LICENSE
author:              tim put
maintainer:          tim put <timput@gmail.com>
copyright:           2020 tim put
category:            Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/timput/hTile.git

common common-options
  build-depends:       base >= 4.13.0.0
                     , Color
                     , STL-Linear
                     , linear
                     , massiv >= 1.0
                     , massiv-io >= 1.0
                     , vector
                     , bytestring
                     , binary
                     , Hexagonal
                     
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -O2
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HTile

executable hTile
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       hTile
                     , optparse-applicative
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -O2

test-suite hTile-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       hTile
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark hTile-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , hTile
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
